@@ -25,7 +25,6 @@ import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import jakarta.annotation.Nullable;
 import jakarta.mail.BodyPart;
@@ -186,6 +185,11 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 	}
 
 	@Override
+	public boolean isFolder(Message message) throws FileSystemException {
+		return false;  // Currently only supports messages
+	}
+
+	@Override
 	public boolean folderExists(String foldername) throws FileSystemException {
 		IMAPFolder baseFolder = getConnection();
 		boolean invalidateConnectionOnRelease = false;
@@ -220,12 +224,15 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 	}
 
 	@Override
-	public DirectoryStream<Message> listFiles(String foldername) throws FileSystemException {
+	public DirectoryStream<Message> list(String foldername, TypeFilter filter) throws FileSystemException {
+		if (filter.includeFolders()) {
+			throw new FileSystemException("Filtering on folders is not supported");
+		}
 		IMAPFolder baseFolder = getConnection();
-		boolean invalidateConnectionOnRelease = false;
-		if (baseFolder==null) {
+		if (baseFolder == null) {
 			return null;
 		}
+		boolean invalidateConnectionOnRelease = false;
 		try {
 			IMAPFolder folder = getFolder(baseFolder, foldername);
 			if (!folder.isOpen()) {
@@ -264,7 +271,7 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 				results = src.moveUIDMessages(messages, destination);
 			}
 			if (results[0] == null) {
-				log.warn("could not find new name of message in folder [" + destinationFolder + "]");
+				log.warn("could not find new name of message in folder [{}]", destinationFolder);
 				return null;
 			}
 			IMAPFolder destination = getFolder(baseFolder, destinationFolder);
@@ -292,7 +299,7 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 				results = src.copyUIDMessages(messages, destination);
 			}
 			if (results[0] == null) {
-				log.warn("could not find new name of message in folder [" + destinationFolder + "]");
+				log.warn("could not find new name of message in folder [{}]", destinationFolder);
 				return null;
 			}
 			IMAPFolder destination = getFolder(baseFolder, destinationFolder);
@@ -508,7 +515,7 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 		if (recipients == null) {
 			return Collections.emptyList();
 		}
-		return Arrays.asList(recipients).stream().map(InternetAddress::toUnicodeString).collect(Collectors.toList());
+		return Arrays.stream(recipients).map(InternetAddress::toUnicodeString).toList();
 	}
 
 	private List<String> getReplyTo(Message f) throws MessagingException {
@@ -516,7 +523,7 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 		if (recipients == null) {
 			return Collections.emptyList();
 		}
-		return Arrays.asList(recipients).stream().map(InternetAddress::toUnicodeString).collect(Collectors.toList());
+		return Arrays.stream(recipients).map(InternetAddress::toUnicodeString).toList();
 	}
 
 	@Override
@@ -605,7 +612,7 @@ public class ImapFileSystem extends MailFileSystemBase<Message, MimeBodyPart, IM
 		return new MimeContentMessage((IMAPMessage) emailMessage);
 	}
 
-	private class MimeContentMessage extends org.frankframework.stream.Message {
+	private static class MimeContentMessage extends org.frankframework.stream.Message {
 
 		public MimeContentMessage(IMAPMessage imapMessage) {
 			super(imapMessage::getMimeStream, null, imapMessage.getClass());
